Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- The open() calls in DiskFile now specifies binary mode, for windows
  compatibility.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-